--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-     <h5 style="text-align: center;">{{pred}}</h5>
+     <h5 style="text-align: center; color: brown; font-weight: 600;">{{pred}}</h5>
       <h1 class="header center orange-text">Diabetes Prediction</h1>
       <div class="row center">
         <h5 class="header col s12 light">Predict the probability of having Diabetes
